feat: Enhance macOS release asset retrieval logic for app bundles

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -340,20 +340,27 @@ jobs:
         run: |
           sed -i 's|"Url": "http://\*:5000"|"Url": "http://*:5002"|' ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64/appsettings.json
 
-      - name: Create macOS .app bundle
+      - name: Split macOS artifacts into binary and app variants
         run: |
-          APP_DIR="./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64/Lighthouse.app"
+          OSX_PUBLISH="./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64"
+          BINARY_DIR="./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64-binary"
+          APP_DIR_ROOT="./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64-app"
+          
+          # Create binary directory with bare files (no .app bundle)
+          mkdir -p "$BINARY_DIR"
+          cp -R "$OSX_PUBLISH"/* "$BINARY_DIR/"
+          echo "Created bare binary directory"
+          
+          # Create .app bundle in app directory
+          APP_DIR="$APP_DIR_ROOT/Lighthouse.app"
           CONTENTS_DIR="$APP_DIR/Contents"
           MACOS_DIR="$CONTENTS_DIR/MacOS"
           RESOURCES_DIR="$CONTENTS_DIR/Resources"
-          OSX_PUBLISH="./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64"
           
-          # Create .app bundle directory structure
           mkdir -p "$MACOS_DIR"
           mkdir -p "$RESOURCES_DIR"
           
-          # COPY (not move) the executable and supporting files into the bundle
-          # This keeps both the raw binary AND the .app bundle in the artifact for testing
+          # Copy executable and supporting files into the bundle
           cp "$OSX_PUBLISH/Lighthouse" "$MACOS_DIR/"
           cp "$OSX_PUBLISH/appsettings.json" "$MACOS_DIR/"
           cp -R "$OSX_PUBLISH/wwwroot" "$MACOS_DIR/" 2>/dev/null || true
@@ -361,8 +368,7 @@ jobs:
           # Copy any other files (certs, etc.) into MacOS directory
           for f in "$OSX_PUBLISH"/*; do
             fname=$(basename "$f")
-            # Skip the .app bundle itself and directories we've already handled
-            if [[ "$fname" != "Lighthouse.app" && "$fname" != "Lighthouse" && "$fname" != "appsettings.json" && "$fname" != "wwwroot" ]]; then
+            if [[ "$fname" != "Lighthouse" && "$fname" != "appsettings.json" && "$fname" != "wwwroot" ]]; then
               if [[ -f "$f" ]]; then
                 cp "$f" "$MACOS_DIR/"
               elif [[ -d "$f" ]]; then
@@ -379,7 +385,7 @@ jobs:
           cp ./LICENSE "$RESOURCES_DIR/" 2>/dev/null || true
           cp ./README.md "$RESOURCES_DIR/" 2>/dev/null || true
           
-          # Create Info.plist with Apple secrets
+          # Create Info.plist
           cat > "$CONTENTS_DIR/Info.plist" << EOF
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
@@ -437,19 +443,13 @@ jobs:
           </plist>
           EOF
           
-          # Set executable permission on both the raw binary and the one in the bundle
-          chmod +x "$OSX_PUBLISH/Lighthouse"
+          # Set executable permissions
+          chmod +x "$BINARY_DIR/Lighthouse"
           chmod +x "$MACOS_DIR/Lighthouse"
           
           echo "Created Lighthouse.app bundle at $APP_DIR"
-          echo ""
-          echo "=== osx-x64 directory now contains BOTH raw binary and .app bundle ==="
-          ls -la "$OSX_PUBLISH"
-          echo ""
-          echo "=== .app bundle contents ==="
-          ls -la "$CONTENTS_DIR"
-          ls -la "$MACOS_DIR"
-          ls -la "$RESOURCES_DIR"
+          echo "Binary directory: $BINARY_DIR"
+          echo "App directory: $APP_DIR_ROOT"
 
       - name: publish linux-x64
         run: dotnet publish -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -p:Version=${{ needs.tag.outputs.fileversion }} -o ./publish/linux-x64
@@ -468,11 +468,17 @@ jobs:
           name: Lighthouse-win-x64-${{ needs.tag.outputs.version }}
           path: ./Lighthouse.Backend/Lighthouse.Backend/publish/win-x64
 
-      - name: Upload macOS artifact for deployment job
+      - name: Upload macOS binary artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: Lighthouse-osx-x64-${{ needs.tag.outputs.version }}
-          path: ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64
+          name: Lighthouse-osx-x64-binary-${{ needs.tag.outputs.version }}
+          path: ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64-binary
+
+      - name: Upload macOS app artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: Lighthouse-osx-x64-app-${{ needs.tag.outputs.version }}
+          path: ./Lighthouse.Backend/Lighthouse.Backend/publish/osx-x64-app
 
       - name: Upload linux artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -783,7 +789,7 @@ jobs:
         working-directory: ./Lighthouse
 
   codesign-macos:
-    name: Sign and Notarize macOS App Bundle
+    name: Sign and Notarize macOS Binaries
     runs-on: macos-latest
     timeout-minutes: 30
     needs:
@@ -800,8 +806,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: Lighthouse-osx-x64-${{ needs.tag.outputs.version }}
-          path: ./artifacts/osx-x64
+          name: Lighthouse-osx-x64-binary-${{ needs.tag.outputs.version }}
+          path: ./artifacts/osx-x64-binary
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse-osx-x64-app-${{ needs.tag.outputs.version }}
+          path: ./artifacts/osx-x64-app
 
       - name: Setup temporary keychain and import certificate
         env:
@@ -840,11 +851,43 @@ jobs:
           echo "Keychain setup complete"
           security find-identity -v -p codesigning "$KEYCHAIN_PATH"
 
+      - name: Sign the bare binary executable
+        env:
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: |
+          BINARY_PATH="./artifacts/osx-x64-binary/Lighthouse"
+          
+          # Extract signing identity from keychain
+          IDENTITY=$(security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep "Developer ID Application" | head -n 1 | sed -n 's/.*"\(.*\)".*/\1/p')
+          
+          if [ -z "$IDENTITY" ]; then
+            echo "Error: No Developer ID Application certificate found in keychain"
+            security find-identity -v -p codesigning "$KEYCHAIN_PATH"
+            exit 1
+          fi
+          
+          echo "Signing bare binary with identity: $IDENTITY"
+          
+          # Sign the binary with hardened runtime
+          codesign --sign "$IDENTITY" \
+            --timestamp \
+            --options runtime \
+            --force \
+            --verbose \
+            "$BINARY_PATH"
+          
+          echo "Signing complete, verifying signature..."
+          
+          # Verify the signature
+          codesign --verify --strict --verbose=2 "$BINARY_PATH"
+          
+          echo "Binary signature verified successfully"
+
       - name: Sign the .app bundle
         env:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
-          APP_PATH="./artifacts/osx-x64/Lighthouse.app"
+          APP_PATH="./artifacts/osx-x64-app/Lighthouse.app"
           ENTITLEMENTS_PATH="$APP_PATH/Contents/entitlements.plist"
           
           # Extract signing identity from keychain
@@ -885,7 +928,7 @@ jobs:
           APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: |
-          APP_PATH="./artifacts/osx-x64/Lighthouse.app"
+          APP_PATH="./artifacts/osx-x64-app/Lighthouse.app"
           ZIP_PATH="./artifacts/Lighthouse.zip"
           
           echo "Creating zip archive for notarization..."
@@ -945,16 +988,86 @@ jobs:
           # Clean up zip file
           rm "$ZIP_PATH"
 
-      - name: Delete unsigned macOS artifact
+      - name: Notarize the bare binary
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_APP_PASSWORD: ${{ secrets.APPLE_APP_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: |
+          BINARY_PATH="./artifacts/osx-x64-binary/Lighthouse"
+          ZIP_PATH="./artifacts/Lighthouse-binary.zip"
+          
+          echo "Creating zip archive for notarization..."
+          cd ./artifacts/osx-x64-binary
+          zip -r ../Lighthouse-binary.zip .
+          cd ../..
+          
+          echo "Submitting for notarization (this may take 10-15 minutes)..."
+          
+          # Submit and capture the submission ID
+          SUBMIT_OUTPUT=$(xcrun notarytool submit "$ZIP_PATH" \
+            --apple-id "$APPLE_ID" \
+            --password "$APPLE_APP_PASSWORD" \
+            --team-id "$APPLE_TEAM_ID" \
+            --output-format json)
+          
+          SUBMISSION_ID=$(echo "$SUBMIT_OUTPUT" | grep -o '"id":"[^"]*"' | head -1 | cut -d'"' -f4)
+          
+          if [ -z "$SUBMISSION_ID" ]; then
+            echo "Error: Failed to get submission ID"
+            echo "$SUBMIT_OUTPUT"
+            exit 1
+          fi
+          
+          echo "Submission ID: $SUBMISSION_ID"
+          echo "Waiting for notarization to complete (timeout: 20 minutes)..."
+          
+          # Wait for notarization with extended timeout
+          xcrun notarytool wait "$SUBMISSION_ID" \
+            --apple-id "$APPLE_ID" \
+            --password "$APPLE_APP_PASSWORD" \
+            --team-id "$APPLE_TEAM_ID" \
+            --timeout 20m \
+            --verbose
+          
+          NOTARIZE_EXIT=$?
+          
+          if [ $NOTARIZE_EXIT -ne 0 ]; then
+            echo "Error: Notarization failed or timed out with exit code $NOTARIZE_EXIT"
+            echo "Retrieving notarization log..."
+            xcrun notarytool log "$SUBMISSION_ID" \
+              --apple-id "$APPLE_ID" \
+              --password "$APPLE_APP_PASSWORD" \
+              --team-id "$APPLE_TEAM_ID" || true
+            exit 1
+          fi
+          
+          echo "Binary notarization successful!"
+          
+          # Clean up zip file
+          rm "$ZIP_PATH"
+
+      - name: Delete unsigned macOS binary artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: Lighthouse-osx-x64-${{ needs.tag.outputs.version }}
+          name: Lighthouse-osx-x64-binary-${{ needs.tag.outputs.version }}
 
-      - name: Upload signed macOS artifact
+      - name: Upload signed macOS binary artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Lighthouse-osx-x64-${{ needs.tag.outputs.version }}
-          path: ./artifacts/osx-x64
+          name: Lighthouse-osx-x64-binary-${{ needs.tag.outputs.version }}
+          path: ./artifacts/osx-x64-binary
+
+      - name: Delete unsigned macOS app artifact
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: Lighthouse-osx-x64-app-${{ needs.tag.outputs.version }}
+
+      - name: Upload signed macOS app artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Lighthouse-osx-x64-app-${{ needs.tag.outputs.version }}
+          path: ./artifacts/osx-x64-app
 
   # Disabled codesign-windows job until a signing certificate is available
   #  codesign-windows:
@@ -1063,8 +1176,13 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: Lighthouse-osx-x64-${{ needs.tag.outputs.version }}
-          path: LighthouseArtifacts/osx-x64
+          name: Lighthouse-osx-x64-binary-${{ needs.tag.outputs.version }}
+          path: LighthouseArtifacts/osx-x64-binary
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: Lighthouse-osx-x64-app-${{ needs.tag.outputs.version }}
+          path: LighthouseArtifacts/osx-x64-app
 
       - uses: actions/download-artifact@v4
         with:
@@ -1078,8 +1196,13 @@ jobs:
 
       - uses: vimtor/action-zip@v1.2
         with:
-          files: LighthouseArtifacts/osx-x64
+          files: LighthouseArtifacts/osx-x64-binary
           dest: Lighthouse-osx-x64.zip
+
+      - uses: vimtor/action-zip@v1.2
+        with:
+          files: LighthouseArtifacts/osx-x64-app
+          dest: Lighthouse-osx-x64-app.zip
 
       - uses: vimtor/action-zip@v1.2
         with:
@@ -1088,7 +1211,7 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx-x64.zip, Lighthouse-linux-x64.zip"
+          artifacts: "Lighthouse-win-x64.zip,Lighthouse-osx-x64.zip,Lighthouse-osx-x64-app.zip,Lighthouse-linux-x64.zip"
           tag: ${{ needs.tag.outputs.version }}
           prerelease: true
           name: "Lighthouse ${{ needs.tag.outputs.version }}"
