--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,6 @@ Lighthouse.EndToEndTests/temp-downloads/*
 tools/codesign/.secure_env/*
 Lighthouse.Backend/.idea/*
 Lighthouse.Backend/Lighthouse.Backend/DB_Backup/*
+
+
+Lighthouse.Backend/Lighthouse.Backend.Tests/Services/Implementation/Licensing/valid_not_expired_license.json
