Fix dependencies for signing job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -698,6 +698,7 @@ jobs:
     timeout-minutes: 45
     needs:
       - tag
+      - packageapp
       # - docker
       # - verifysqlite
       # - verifypostgres
