--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -337,12 +337,7 @@ jobs:
         run: rm -f ./Lighthouse.Backend/Lighthouse.Backend/publish/win-x64/appsettings.Development.json
 
       - name: publish osx-x64
-        run: dotnet publish -c Release -r osx-x64 --self-contained \
-              -p:PublishSingleFile=true \
-              -p:PublishReadyToRun=true \
-              -p:IncludeNativeLibrariesForSelfContained=true \
-              -p:Version=${{ needs.tag.outputs.fileversion }} \
-              -o ./publish/osx-x64
+        run: dotnet publish -c Release -r osx-x64 --self-contained -p:PublishSingleFile=true -p:PublishReadyToRun=true -p:IncludeNativeLibrariesForSelfContained=true -p:Version=${{ needs.tag.outputs.fileversion }} -o ./publish/osx-x64
         working-directory: ./Lighthouse.Backend/Lighthouse.Backend
 
       - name: Remove development settings from osx-x64
